# shpool-vterm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: altscreen.rs  attrs.rs  cell.rs  grid.rs  lib.rs  line.rs  screen.rs  scrollback.rs  term.rs
tests/: altscreen.rs  attrs.rs  basic.rs  lineshift.rs  movement.rs  osc.rs  shift.rs  tabstops.rs
tests/support/: frag.rs  mod.rs
